# SocialPoint

SocialPointExam/proj.ios/SocialPointExam/: SocialPointExam-Info.plist
SocialPointExam/proj.ios/SocialPointExam.xcodeproj/: project.pbxproj
SocialPointExam/proj.linux/: CMakeLists.txt
SocialPointExam/proj.mac/: logo.icns
SocialPointExam/proj.mac/SocialPointExam/: SocialPointExam-Info.plist
SocialPointExam/proj.mac/SocialPointExam.xcodeproj/: project.pbxproj
SocialPointExam/proj.mac/SocialPointExam.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SocialPointExam/proj.mac/cocos2dx/: cocos2dx.h  cocos2dx.m
SocialPointExam/proj.win/: cocos2dx-extensions.vcxproj  cocos2dx-extensions.vcxproj.filters  cocos2dx.vcxproj  cocos2dx.vcxproj.filters  sp-mobile-exam.sln  sp-mobile-exam.vcxproj  sp-mobile-exam.vcxproj.filters
SocialPointExam/proj.win/Debug.win32/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cocos2dx-extensions.lastbuildstate  cocos2dx.exp  cocos2dx.lib  cocos2dx.write.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  sp-mobile-exam.lastbuildstate
SocialPointExam/proj.win/Release.win32/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cocos2dx-extensions.lastbuildstate  cocos2dx.exp  cocos2dx.lib  cocos2dx.write.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
SocialPointExam/resources/CCB/: InstructionsScene.ccbi  InstructionsScroll.ccbi  MainScene.ccbi
SocialPointExam/resources/HD/buildings/: archer_tower_1.plist  barracks_1.plist  clan_portal_1.plist  enemy_headquarter_1.plist  gold_storage_1.plist  headquarter_1.plist  wall_1.plist
SocialPointExam/resources/HD/units/: goblin_1.plist  mage_1.plist  soldier_1.plist
SocialPointExam/resources/HDR/buildings/: archer_tower_1.plist  barracks_1.plist  clan_portal_1.plist  enemy_headquarter_1.plist  gold_storage_1.plist  headquarter_1.plist  wall_1.plist
SocialPointExam/resources/HDR/units/: goblin_1.plist  mage_1.plist  soldier_1.plist
SocialPointExam/resources/SD/buildings/: archer_tower_1.plist  barracks_1.plist  clan_portal_1.plist  enemy_headquarter_1.plist  gold_storage_1.plist  headquarter_1.plist  wall_1.plist
SocialPointExam/resources/SD/units/: goblin_1.plist  mage_1.plist  soldier.plist  soldier_1.plist
SocialPointExam/resources/data/: SelectedShader.fsh  instructions.txt
SocialPointExam/src/: AppDelegate.cpp  AppDelegate.hpp  AppMacros.hpp
SocialPointExam/src/game/: CCLayerPanZoom.cpp  CCLayerPanZoom.h  GameBuilding.cpp  GameBuilding.fwd.hpp  GameBuilding.hpp  GameBuildingDestroyable.cpp  GameBuildingDestroyable.fwd.hpp  GameBuildingDestroyable.hpp  GameBuildingView.cpp  GameBuildingView.fwd.hpp  GameBuildingView.hpp  GameEntity.cpp  GameEntity.fwd.hpp  GameEntity.hpp  GameEntityView.cpp  GameEntityView.fwd.hpp  GameEntityView.hpp  GameHudLayer.cpp  GameHudLayer.fwd.hpp  GameHudLayer.hpp  GameMap.cpp  GameMap.fwd.hpp  GameMap.hpp  GameMapView.cpp  GameMapView.fwd.hpp  GameMapView.hpp  GameScene.cpp  GameScene.fwd.hpp  GameScene.hpp  GameUnit.cpp  GameUnit.fwd.hpp  GameUnit.hpp  GameUnitView.cpp  GameUnitView.fwd.hpp  GameUnitView.hpp  PathFinder.cpp  PathFinder.hpp
SocialPointExam/src/game/building/: GameWall.cpp  (+2 more)
SocialPointExam/src/gui/: InstructionsScene.cpp  InstructionsScene.fwd.hpp  InstructionsScene.hpp  MainScene.cpp  MainScene.fwd.hpp  MainScene.hpp
SocialPointExam/src/service/: IUrlOpener.fwd.hpp  IUrlOpener.hpp  ServiceLocator.fwd.hpp
(+29 files in other folders)
